<resources>
    <string name="weibo_detail">正文</string>
    <string name="weibo_about">关于</string>
    <string name="weibo_feedback">意见反馈</string>
    <string name="weibo_iclient">\#Android客户端意见反馈#</string>
    <string name="start_weibo">开始体验</string>
    <string name="attend_topic_ok">关注话题成功</string>
    <string name="attend_topic_failed">关注话题失败</string>
    <string name="remove_topic_ok">取消关注成功</string>
    <string name="remove_topic_failed">取消关注失败</string>
    <string name="forward_add_comment">同时作为评论发布</string>
    <string name="comment_add_forward">同时发一条微博</string>
    <string name="apn_is_wrong1">手机接入点设置有误，请重新设置</string>
    <string name="apn_is_wrong2">现在处于飞行模式下，请切换模式并打开网络连接</string>
    <string name="new_home_msg">条新微博，点击刷新.</string>
    <string name="new_comments_msg">条新评论，点击刷新.</string>
    <string name="new_at_msg">条新@消息，点击刷新.</string>
    <string name="new_message_msg">条新私信，点击刷新.</string>
    <string name="save_pic_ok">保存图片成功(%s)</string>
    <string name="save_pic_failed">保存图片失败!网络异常或者没有SD卡</string>
    <string name="app_name">微博</string>
    <string name="title_publish">发布新微博</string>
    <string name="title_login">账号</string>
    <string name="title_forward">转发微博</string>
    <string name="title_comment">评论微博</string>
    <string name="new_user_warning">欢迎微博新用户</string>
    <string name="new_user_warning_content">恭喜您注册成功，现在开始微博之旅吧！</string>
    <string name="menu_switchuser">账号</string>
    <string name="menu_bookmark">我的收藏</string>
    <string name="menu_contact">我的资料</string>
    <string name="menu_myblog">我的微博</string>
    <string name="menu_game">游戏</string>
    <string name="menu_settings">设置</string>
    <string name="menu_about">关于</string>
    <string name="menu_new">撰写</string>
    <string name="item_menu_title">微博功能</string>
    <string name="menu_camera">相机拍摄</string>
    <string name="menu_gallery">手机相册</string>
    <string name="insert_pic_menu_title">插入图片</string>
    <string name="account_menu_title">账号操作</string>
    <string name="my_main_home">我的首页</string>
    <string name="main_home">首页</string>
    <string name="main_new">有什么新鲜的事情告诉大家</string>
    <string name="main_at">\@我</string>
    <string name="main_comment">评论</string>
    <string name="main_message">私信</string>
    <string name="main_edit">编写</string>
    <string name="main_reload">刷新</string>
    <string name="main_login_fail">登录服务器失败！</string>
    <string name="main_fetch_fail">无法连接到服务器，请检查网络配置</string>
    <string name="main_pic">[图]</string>
    <string name="main_msg_new">有新微博，</string>
    <string name="main_msg_at">条微博提到我，</string>
    <string name="main_msg_comment">条新评论，</string>
    <string name="main_msg_message">条新私信，</string>
    <string name="main_msg_fan">位新粉丝，</string>
    <string name="main_msg_newmblog">条新微博</string>
    <string name="main_msg_refresh">刷新看看</string>
    <string name="main_input_keyword">请输入搜索关键词</string>
    <string name="main_no_mblog">暂无数据</string>
    <string name="main_no_at">暂无@我的微博</string>
    <string name="main_no_comment">暂无评论</string>
    <string name="main_no_message">暂无私信</string>
    <string name="main_no_favorite">暂无收藏</string>
    <string name="main_no_data">暂无数据</string>
    <string name="main_gps_on">地理信息开启</string>
    <string name="main_gps_off">地理信息关闭</string>
    <string name="no_search_result_for_user">对不起，没有找到相关用户</string>
    <string name="no_search_result_for_mblog">对不起，没有找到相关微博</string>
    <string name="login">登录</string>
    <string name="login_user">账		号</string>
    <string name="login_pass">密		码</string>
    <string name="login_pass_comf">密码确认</string>
    <string name="login_miss_user">请输入登录账号</string>
    <string name="login_miss_pass">请输入登录密码</string>
    <string name="login_failed">登录失败，请检查账号</string>
    <string name="login_parser_failed">登录错误，请再试一次</string>
    <string name="login_success">登录成功</string>
    <string name="user_delete_success">删除账号成功</string>
    <string name="del_attention_failed">取消关注失败</string>
    <string name="add_attention_failed">添加关注失败</string>
    <string name="loading_userinfo">获取信息</string>
    <string name="load_userinfo_failed">获取用户数据失败</string>
    <string name="communicating_failed">网络连接失败</string>
    <string name="guest_label">游客</string>
    <string name="my_account_label">我的账号</string>
    <string name="add_account_label">添加账号</string>
    <string name="edit_account_label">编辑账号</string>
    <string name="register_label">用户注册</string>
    <string name="link_lookaround">随便看看</string>
    <string name="link_recommend">推荐用户</string>
    <string name="link_hot">热门转发</string>
    <string name="loadinfo">加载中....</string>
    <string name="connect">连接服务器 ....</string>
    <string name="logining">登录服务器 ....</string>
    <string name="loading">获取数据</string>
    <string name="locating">获取位置数据....</string>
    <string name="loadCmting">获取数据 ....</string>
    <string name="posting">正在发布微博 ....</string>
    <string name="postcmting">正在发布 ....</string>
    <string name="postMsging">正在发布 ....</string>
    <string name="loadusering">获取信息</string>
    <string name="attenting">处理关注</string>
    <string name="attention_topic">关注此话题</string>
    <string name="new_topic_comment">说点什么</string>
    <string name="forward">转发</string>
    <string name="comment">评论</string>
    <string name="sendMsg">发私信</string>
    <string name="reply">回复</string>
    <string name="cancel">取消</string>
    <string name="close">关闭</string>
    <string name="go_next">继续</string>
    <string name="exit">退出</string>
    <string name="delete">删除账户</string>
    <string name="ok">确定</string>
    <string name="more">更多</string>
    <string name="comment_show">查看已有评论</string>
    <string name="exit_confirm">确认退出微博</string>
    <string name="me">我</string>
    <string name="input_pass1">输入密码：</string>
    <string name="input_pass2">确认密码：</string>
    <string name="pass_length">密码：6-16位数字或英文字母，区分大小写</string>
    <string name="user_info">用户资料</string>
    <string name="intro">简介</string>
    <string name="region">地区</string>
    <string name="user">用户</string>
    <string name="weibo">微博</string>
    <string name="attention">关注</string>
    <string name="fans">粉丝</string>
    <string name="topic">话题</string>
    <string name="list_no_item">没有数据</string>
    <string name="num">人</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="back">返回首页</string>
    <string name="attend_to_him">关注他</string>
    <string name="attend_to_her">关注她</string>
    <string name="user_delattention">取消关注</string>
    <string name="user_msg">发私信</string>
    <string name="msg_fetch_null">没有与此人的私信记录</string>
    <string name="at_him">\@他</string>
    <string name="at_her">\@她</string>
    <string name="new_camera">拍照</string>
    <string name="new_gallery">相册</string>
    <string name="new_send">发布</string>
    <string name="new_close">关闭</string>
    <string name="new_label">可输入字数：</string>
    <string name="exceed_label">超出字数：</string>
    <string name="new_empty">您还没有输入任何内容</string>
    <string name="new_post_succeed">发布微博成功。</string>
    <string name="new_post_fail">发布微博失败。</string>
    <string name="new_comment_succeed">发布评论成功。</string>
    <string name="new_comment_fail">发布评论失败。</string>
    <string name="new_msg_succeed">发布私信成功。</string>
    <string name="new_msg_fail">发布私信失败。</string>
    <string name="add_favorite_succeed">收藏微博成功。</string>
    <string name="add_favorite_fail">收藏微博失败。</string>
    <string name="del_favorite_succeed">取消收藏微博成功。</string>
    <string name="del_favorite_fail">取消收藏微博失败。</string>
    <string name="setting_picture">显示图片</string>
    <string name="setting_picture_desc">下载并显示头像和微博图片</string>
    <string name="setting_pic_size">图片大小</string>
    <string name="setting_pic_size_desc">微博图片大小，小图可以节省流量</string>
    <string name="setting_autocheck">自动检测</string>
    <string name="setting_autocheck_desc">自动检测新微博、评论和私信</string>
    <string name="setting_vibrator">震动提醒</string>
    <string name="setting_vibrator_desc">检测到新消息时，震动提醒</string>
    <string name="setting_interval">检测间隔</string>
    <string name="setting_interval_desc">自动检测新微博的间隔时间，间隔长省流量</string>
    <string name="setting_autoload_more">自动加载“更多”</string>
    <string name="setting_autoload_more_desc">到达列表底部时自动加载“更多”微博</string>
    <string name="setting_title">提示</string>
    <string name="setting_need_clear_cache">您需要清除缓存吗？</string>
    <string name="setting_doing">处理中</string>
    <string name="setting_success_clear">删除成功</string>
    <string name="answer_ori_mblog">回复我的微博</string>
    <string name="answer_my_comment">回复我的评论</string>
    <string name="hour_label">小时前</string>
    <string name="minute_label">分钟前</string>
    <string name="second_label">秒前</string>
    <string name="itemmenu_reload_picture">刷新图片</string>
    <string name="itemmenu_reload_portrait">刷新头像</string>
    <string name="itemmenu_back">收起</string>
    <string name="itemmenu_forward">转发</string>
    <string name="itemmenu_comment">评论</string>
    <string name="itemmenu_reply_comment">回复评论</string>
    <string name="itemmenu_reply_message">回复私信</string>
    <string name="itemmenu_delete">删除</string>
    <string name="itemmenu_delete_mblog">删除微博</string>
    <string name="itemmenu_bookmark">收藏</string>
    <string name="itemmenu_bookmark_del">取消收藏</string>
    <string name="itemmenu_userinfo">查看个人资料</string>
    <string name="itemmenu_info">查看资料</string>
    <string name="itemmenu_ori_pic">查看原图</string>
    <string name="itemmenu_ori_mblog">查看原微博</string>
    <string name="save">保存</string>
    <string name="num_comment">条评论</string>
    <string name="radio_button_topic">微博</string>
    <string name="radio_button_user">用戶</string>
    <string name="radio_button_square">广场</string>
    <string name="remove_pic">清除图片</string>
    <string name="imageviewer_back">返回</string>
    <string name="save_ok">图片已保存到%s目录下</string>
    <string name="remove_attention">取消此关注</string>
    <string name="downloadpic_failed">获取图片失败</string>
    <string name="weibo_running">新浪微博正在运行</string>
    <string name="warning">使用免责声明</string>
    <string name="please_fill_info">请完善您的资料:</string>
    <string name="nickname">昵		称</string>
    <string name="sex">性		别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="fill_info">完善资料</string>
    <string name="filling">完善资料...</string>
    <string name="his_topics">话题</string>
    <string name="fill_info_failed">完善资料失败，请稍后再试!</string>
    <string name="nologin_warning">您还没有登录，请登录后再进行此操作!</string>
    <string name="entries_interval_1">3分钟</string>
    <string name="entries_interval_3">10分钟</string>
    <string name="entries_interval_4">30分钟</string>
    <string name="entries_interval_5">1小时</string>
    <string name="bracel">(</string>
    <string name="brace2">)</string>
    <string name="main_login">登录</string>
    <string name="position_info">经度:, 纬度:</string>
    <string name="strDown">下一页</string>
    <string name="strUp">上一页</string>
    <string name="nothing">引用</string>
    <string name="notConnect">当前无帐号,请登录您的帐号</string>
    <string name="from">来自:%s</string>
    <string name="already_have_fav_blog">已添加至收藏!</string>
    <string name="share_in_weibo">分享到微博</string>
    <string name="refresh">刷新</string>
    <string name="share">分享</string>
    <string name="short_message">短信</string>
    <string name="email">电子邮件</string>
    <string name="fail_to_delete_weibo">删除微博失败！</string>
    <string name="succeed_to_delete_weibo">成功删除微博</string>
    <string name="weibo_share">微博分享</string>
    <string name="choose_email_client">请选择电子邮件客户端</string>
    <string name="gps_not_found">GPS功能未开启，请先开启GPS后再使用本程序！</string>
    <string name="preferences_clear_cache_title">清除缓存</string>
    <string name="preferences_clear_cache_summary">清除缓存:包括用户信息、微博信息、图片等。</string>
    <string name="reg_domain">\@3g.sina.cn</string>
    <string name="search_weibo">搜索微博</string>
    <string name="search_user">找人</string>
    <string name="searchsquare">微博广场</string>
    <string name="regist_weibo">开通微博</string>
</resources>