<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@color/white" android:orientation="vertical"
	android:layout_width="fill_parent" android:layout_height="fill_parent">
	<include android:id="@+id/title" layout="@layout/title_left_button"/> 
	<RelativeLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
		<TextView android:textSize="15.0sp" android:textColor="#ff000000"
			android:id="@+id/tvusernum" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_marginLeft="10.0dip"
			android:text="账       号" android:layout_alignParentLeft="true"
			android:layout_centerVertical="true" />
		<EditText android:id="@+id/etusernum" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_marginLeft="20.0dip"
			android:layout_marginRight="20.0dip" android:text=""
			android:singleLine="true" android:layout_toRightOf="@id/tvusernum"
			android:layout_alignTop="@id/tvusernum" />
		<TextView android:textSize="15.0sp" android:textColor="#ff000000"
			android:id="@+id/eg" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_marginLeft="10.0dip"
			android:text="@string/reg_domain" android:layout_below="@id/etusernum"
			android:layout_alignLeft="@id/etusernum" />
	</RelativeLayout>
	<RelativeLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
		<TextView android:textSize="15.0sp" android:textColor="#ff000000"
			android:id="@+id/tvuserpass" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_marginLeft="10.0dip"
			android:text="密       码" android:layout_alignParentLeft="true"
			android:layout_centerVertical="true" />
		<EditText android:id="@+id/etuserpass" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_marginLeft="20.0dip"
			android:layout_marginRight="20.0dip" android:text=""
			android:singleLine="true" android:layout_toRightOf="@id/tvuserpass"
			android:layout_alignTop="@id/tvuserpass" />
	</RelativeLayout>
	<RelativeLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
		<TextView android:textSize="15.0sp" android:textColor="#ff000000"
			android:id="@+id/tvuserpass2" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_marginLeft="10.0dip"
			android:text="@string/login_pass_comf"
			android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
		<EditText android:id="@+id/etuserpass2" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_marginLeft="20.0dip"
			android:layout_marginRight="20.0dip" android:text=""
			android:singleLine="true" android:layout_toRightOf="@id/tvuserpass2"
			android:layout_alignTop="@id/tvuserpass2" />
	</RelativeLayout>
	<RelativeLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_marginTop="10.0dip">

		<TextView android:textSize="15.0sp" android:textColor="#ff000000"
			android:id="@+id/tvSetNick" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_marginLeft="10.0dip"
			android:text="昵       称" android:layout_alignParentLeft="true"
			android:layout_centerVertical="true" />
		<EditText android:id="@+id/etSetNick" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_marginLeft="20.0dip"
			android:layout_marginRight="20.0dip" android:text=""
			android:layout_alignLeft="@id/etuserpass2" android:singleLine="true"
			android:layout_toRightOf="@id/tvSetNick" android:layout_alignTop="@id/tvSetNick" />
	</RelativeLayout>
	<LinearLayout android:orientation="horizontal"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_marginTop="10.0dip">
		<TextView android:textSize="15.0sp" android:textColor="#ff000000"
			android:layout_gravity="center_vertical" android:id="@+id/tvSetGender"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_marginLeft="10.0dip" android:text="性       别" />
		<RadioGroup android:orientation="horizontal" android:id="@+id/rgSex"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_marginLeft="20.0dip">
			<RadioButton android:textColor="@android:color/black"
				android:layout_gravity="left" android:id="@+id/rbMale"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="@string/male" android:checked="true"/>
			<RadioButton android:textColor="@android:color/black"
				android:layout_gravity="right" android:id="@+id/rbFemale"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_marginLeft="40.0dip" android:text="@string/female" />
		</RadioGroup>
	</LinearLayout>
	<Button android:textSize="15.0sp" android:textColor="#ffffffff"
		android:gravity="center" android:layout_gravity="center" android:id="@+id/bnContinue"
		android:background="@drawable/regist_weibo" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_marginTop="10.0dip"
		android:text="@string/regist_weibo" />
</LinearLayout>
