<?xml version="1.0" encoding="UTF-8"?>
<ScrollView android:background="#fff4f4f4" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
  <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" >
	<include android:id="@+id/title" layout="@layout/title_two_button"/>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <RelativeLayout android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:id="@id/ivItemPortrait" android:visibility="invisible" android:layout_width="60.0sp" android:layout_height="60.0sp" android:layout_marginLeft="10.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="15.0dip" android:src="@drawable/portrait" />
            <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="#ff222222" android:ellipsize="marquee" android:id="@id/tvItemName" android:fadingEdge="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:singleLine="true" android:layout_toRightOf="@id/ivItemPortrait" android:layout_alignTop="@id/ivItemPortrait" />
            <ImageView android:id="@id/ivItemGender" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:layout_marginBottom="5.0dip" android:src="@drawable/icon_male" android:layout_toRightOf="@id/tvItemName" android:layout_alignBottom="@id/tvItemName" />
            <TextView android:textSize="14.0sp" android:textColor="#ff222222" android:ellipsize="marquee" android:id="@id/tvItemProvince" android:visibility="invisible" android:fadingEdge="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:singleLine="true" android:layout_toRightOf="@id/ivItemPortrait" android:layout_below="@id/tvItemName" />
            <TextView android:textSize="14.0sp" android:textColor="#ff222222" android:textColorLink="#ff0072bc" android:ellipsize="marquee" android:autoLink="web" android:id="@id/tvItemAccount" android:visibility="invisible" android:fadingEdge="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:singleLine="true" android:layout_toRightOf="@id/ivItemPortrait" android:layout_alignBottom="@id/ivItemPortrait" />
            <TextView android:textSize="14.0sp" android:textColor="#ff222222" android:textColorLink="#ff0072bc" android:autoLink="web" android:id="@id/tvItemContent" android:background="@drawable/profile_description_bg" android:padding="10.0dip" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="15.0dip" android:layout_below="@id/ivItemPortrait" />
        </RelativeLayout>
        <LinearLayout android:id="@id/usrinfo_btns_grp" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:ellipsize="marquee" android:id="@id/btn_atten" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/attend_to_him" android:singleLine="true" android:layout_weight="1.0" />
            <Button android:ellipsize="marquee" android:id="@id/btn_message" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sendMsg" android:singleLine="true" android:layout_weight="1.0" />
            <Button android:ellipsize="marquee" android:id="@id/btn_at" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/at_him" android:singleLine="true" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip">
            <TextView android:textSize="14.0sp" android:textColor="#ff666666" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/weibo" />
            <TextView android:textSize="14.0sp" android:textColor="#ff999999" android:id="@id/tvItemBlogNum" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" />
            <TextView android:textSize="14.0sp" android:textColor="#ff666666" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/attention" />
            <TextView android:textSize="14.0sp" android:textColor="#ff999999" android:id="@id/tvItemMeAttNum" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" />
            <TextView android:textSize="14.0sp" android:textColor="#ff666666" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/fans" />
            <TextView android:textSize="14.0sp" android:textColor="#ff999999" android:id="@id/tvItemAttMeNum" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" />
        </LinearLayout>
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/usrinfo_detail_block" android:background="@drawable/usrinfo_bg" android:padding="10.0dip" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip">
            <include android:id="@id/first_btn_group" layout="@layout/profile_btn_group_s" />
            <View android:background="@drawable/shui_ping_divider_wrap" android:layout_width="fill_parent" android:layout_height="3.0dip" />
            <include android:id="@id/second_btn_group" layout="@layout/profile_btn_group" />
            <View android:id="@id/vHaveFav" android:background="@drawable/shui_ping_divider_wrap" android:layout_width="fill_parent" android:layout_height="3.0dip" />
            <include android:id="@id/third_btn_group" layout="@layout/profile_btn_group" />
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
</ScrollView>